agregue cambios al html y css del proyecto Atlas

--- a/index.html
+++ b/index.html
@@ -57,41 +57,47 @@
         </div>
     </section>
     <section class="precios">
-        <h1><b>Check our pricing</b></h1>
-        <div class="plan">
-            <h3>STARTUP</h3>
-            <p class="precio">$0 <span>/ MO.</span></p>
-            <ul>
+        <div class="contenido-precios">
+          <h1>Check our pricing</h1>
+          <div class="contenedor-planes">
+            <div class="plan">
+              <h3>STARTUP</h3>
+              <p class="precio">$0 <span>/MO.</span></p>
+              <ul>
                 <li>Up to 5 Documents</li>
                 <li>Up to 3 Revisions</li>
                 <li>5 team Members</li>
                 <li>Limited Support</li>
-            </ul>
-            <a href="#" class="boton"><b>Get Free</b></a>
-        </div>
-        <div class="plan destacado">
-            <h3>PREMIUM</h3>
-            <p class="precio">$10 <span>/ MO.</span></p>
-            <ul>
+              </ul>
+              <a href="#" class="boton">Get Free</a>
+            </div>
+      
+            <div class="plan-destacado">
+              <h3>PREMIUM</h3>
+              <p class="precio">$10 <span>/MO.</span></p>
+              <ul>
                 <li>Up to 15 Documents</li>
                 <li>Up to 10 Revisions</li>
                 <li>25 team Members</li>
                 <li>Limited Support</li>
-            </ul>
-            <a href="#" class="botones"><b>Get Free</b></a>
-        </div>
-        <div class="plan">
-            <h3>PROFESSIONAL</h3>
-            <p class="precio">$30 <span>/ MO.</span></p>
-            <ul>
+              </ul>
+              <a href="#" class="boton">Get Free</a>
+            </div>
+      
+            <div class="plan">
+              <h3>PROFESSIONAL</h3>
+              <p class="precio">$30 <span>/MO.</span></p>
+              <ul>
                 <li>Unlimited Documents</li>
                 <li>Unlimited Revisions</li>
                 <li>Unlimited Members</li>
                 <li>Unlimited Support</li>
-            </ul>
-            <a href="#" class="boton"><b>Get Free</b></a>
+              </ul>
+              <a href="#" class="boton">Get Free</a>
+            </div>
+          </div>
         </div>
-    </section>
+    </section>      
     <section class="contacto">
         <div class="logos-empresas">
             <img src="img/client-1.png" alt="Empresa 1">
